add last two radio button questions for iphone or android and english or math to html page

--- a/index.html
+++ b/index.html
@@ -27,9 +27,46 @@
         </label>
       </div>
     <p>Which kind of company would you rather work for?</p>
-    <div class="radio">
-      <label>
-        <input type="radio" name="company" value=""
+      <div class="radio">
+        <label>
+          <input type="radio" name="company" value="corporate">
+          Corporate
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="startup" value="startup">
+          Startup
+        </label>
+      </div>
+    <p>iPhone or Android?</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="iphone" value="iphone">
+          iPhone
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="android" value="android">
+          Android
+        </label>
+      </div>
+    <p>Which subject did you enjoy more in school?</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="english" value="english">
+          English
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="math" value="math">
+          Math
+        </label>
+      </div>
+
+
 
     
 
