--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <div class="container">
     <h1>Which Programming Language Should You Learn?</h1>
     <h2>To find out which programming language is best suited for you, answer the following questions:</h2>
-    <p>Do you have an eye for design?</p>
+    <p>Do you have any experience with programming?</p>
     <form id="programming-quiz">
       <div class="radio">
         <label>
-          <input type="radio" name="design" value="yes">
+          <input type="radio" name="experience" value="yes">
           Yes
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="design" value="no">
+          <input type="radio" name="experience" value="no">
           No
         </label>
       </div>
@@ -65,9 +65,27 @@
           Math
         </label>
       </div>
+    <p>Formal Thursday or Casual Friday?</p>
+      <div class="radio"
+        <label>
+          <input type="radio" name="attire" value="attire">
+          Formal Thursday
+        </label>
+      </div>
+      <div class="radio"
+        <label>
+          <input type="radio" name="attire" value="attire">
+          Casual Friday
+        </label>
+      </div>
 
     <button type="button" class="btn btn-primary btn-lg">Submit</button>
     </form>
+
+    <div id="python">
+      <h3>You should learn Python!</h3>
+      <p>Python </p>
+    </div>
 
 
 
