add ruby id, javascript id, and csharp id to styles sheet as display none

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <p>Javascript is the most popular programming language but also one of the more complex languages to learn! It is great for those that have a more math-oriented brain and enjoy complex problems and formulas. If you are going into data science, this is the language for you!</p>
     </div>
 
-    <div id="c#">
+    <div id="csharp">
       <h3>You should learn C#!</h3>
       <p>C# is an incredibly versatile programming language and is the best for building Windows client applications. You will find that many programmer jobs in corporate settings are looking for candidates with C# skills. If you enjoy windows programs and a more corporate setting while remaining versatile, C# is definitely for you!</p>
     </div>
