replace radio buttons with drop down form for each question due to difficulty figuring out how to calculate radio button input as result

--- a/index.html
+++ b/index.html
@@ -12,9 +12,26 @@
   <div class="container">
     <h1>Which Programming Language Should You Learn?</h1>
     <h2>To find out which programming language is best suited for you, answer the following questions:</h2>
-    <p>Do you have any experience with programming?</p>
+    <!-- <p>Do you have any experience with programming?</p> -->
     <form id="programming-quiz">
-      <div class="radio">
+      <ul>
+        <label for="experience">Do you have any experience with programming?</label>
+        <select id="experience">
+          <option value="true">Yes</option>
+          <option value="false">No</option>
+        </select>
+      </ul>
+      <ul>
+        <label for="company">Which kind of company would you rather work for?</label>
+        <select id="company">
+          <option value="true">Corporate</option>
+          <option value="false">Startup</option>
+        </select>
+      </ul>
+
+
+
+      <!-- <div class="radio">
         <label>
           <input type="radio" name="experience" value="yes">
           Yes
@@ -77,7 +94,7 @@
           <input type="radio" name="attire" value="attire">
           Casual Friday
         </label>
-      </div>
+      </div> -->
 
     <button type="button" class="btn btn-primary btn-lg">Submit</button>
     </form>
