add class form select and default select example to each drop down question on html sheet

--- a/index.html
+++ b/index.html
@@ -16,16 +16,42 @@
     <form id="programming-quiz">
       <ul>
         <label for="experience">Do you have any experience with programming?</label>
-        <select id="experience">
+        <select id="experience" class="form-select" aria-label="Default select example">
+          <option selected>Select One</option>
           <option value="true">Yes</option>
           <option value="false">No</option>
         </select>
       </ul>
       <ul>
         <label for="company">Which kind of company would you rather work for?</label>
-        <select id="company">
+        <select id="company" class="form-select" aria-label="Default select example">
+          <option selected>Select One</option>
           <option value="true">Corporate</option>
           <option value="false">Startup</option>
+        </select>
+      </ul>
+      <ul>
+        <label for="phone">iPhone or Android?</label>
+        <select id="phone" class="form-select" aria-label="Default select example">
+          <option selected>Select One</option>
+          <option value="false">iPhone</option>
+          <option value="true">Android</option>
+        </select>
+      </ul>
+      <ul>
+        <label for="subject">Which subject did you enjoy more in school?</label>
+        <select id="subject" class="form-select" aria-label="Default select example">
+          <option selected>Select One</option>
+          <option value="false">English</option>
+          <option value="true">Math</option>
+        </select>
+      </ul>
+      <ul>
+        <label for="attire">Formal Thursday or Casual Friday?</label>
+        <select id="attire" class="form-select" aria-label="Default select example">
+          <option selected>Select One</option>
+          <option value="true">Formal Thursday</option>
+          <option value="false">Casual Friday</option>
         </select>
       </ul>
 
