adjust drop down size to small using bootstrap styling on html page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form id="programming-quiz">
       <ul>
         <label for="experience">Do you have any experience with programming?</label>
-        <select id="experience" class="form-select" aria-label="Default select example">
+        <select id="experience" class="form-select form-select-sm" aria-label="Default select example">
           <option selected>Select One</option>
           <option value="true">Yes</option>
           <option value="false">No</option>
@@ -24,7 +24,7 @@
       </ul>
       <ul>
         <label for="company">Which kind of company would you rather work for?</label>
-        <select id="company" class="form-select" aria-label="Default select example">
+        <select id="company" class="form-select form-select-sm" aria-label="Default select example">
           <option selected>Select One</option>
           <option value="true">Corporate</option>
           <option value="false">Startup</option>
@@ -32,7 +32,7 @@
       </ul>
       <ul>
         <label for="phone">iPhone or Android?</label>
-        <select id="phone" class="form-select" aria-label="Default select example">
+        <select id="phone" class="form-select form-select-sm" aria-label="Default select example">
           <option selected>Select One</option>
           <option value="false">iPhone</option>
           <option value="true">Android</option>
@@ -40,7 +40,7 @@
       </ul>
       <ul>
         <label for="subject">Which subject did you enjoy more in school?</label>
-        <select id="subject" class="form-select" aria-label="Default select example">
+        <select id="subject" class="form-select form-select-sm" aria-label="Default select example">
           <option selected>Select One</option>
           <option value="false">English</option>
           <option value="true">Math</option>
@@ -48,7 +48,7 @@
       </ul>
       <ul>
         <label for="attire">Formal Thursday or Casual Friday?</label>
-        <select id="attire" class="form-select" aria-label="Default select example">
+        <select id="attire" class="form-select form-select-sm" aria-label="Default select example">
           <option selected>Select One</option>
           <option value="true">Formal Thursday</option>
           <option value="false">Casual Friday</option>
