add reset quiz button to html page, add elements and variable to scripts page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         </label>
       </div> -->
 
-    <button type="button" class="btn btn-primary btn-lg">Submit</button>
+    <button type="button" class="btn btn-primary btn-lg" id="submit">Submit</button>
+    <button type="button" class="btn btn-primary btn-lg" id="reset-button">Reset Quiz</button>
     </form>
 
     <div id="ruby">
