delete all drop down form, replace with commented out radio buttons instead to see if its easier to calculate result

--- a/index.html
+++ b/index.html
@@ -12,52 +12,9 @@
   <div class="container">
     <h1>Which Programming Language Should You Learn?</h1>
     <h2>To find out which programming language is best suited for you, answer the following questions:</h2>
-    <!-- <p>Do you have any experience with programming?</p> -->
+    <p>Do you have any experience with programming?</p>
     <form id="programming-quiz">
-      <ul>
-        <label for="experience">Do you have any experience with programming?</label>
-        <select id="experience" class="form-select form-select-sm" aria-label="Default select example">
-          <option selected>Select One</option>
-          <option value="true">Yes</option>
-          <option value="false">No</option>
-        </select>
-      </ul>
-      <ul>
-        <label for="company">Which kind of company would you rather work for?</label>
-        <select id="company" class="form-select form-select-sm" aria-label="Default select example">
-          <option selected>Select One</option>
-          <option value="true">Corporate</option>
-          <option value="false">Startup</option>
-        </select>
-      </ul>
-      <ul>
-        <label for="phone">iPhone or Android?</label>
-        <select id="phone" class="form-select form-select-sm" aria-label="Default select example">
-          <option selected>Select One</option>
-          <option value="false">iPhone</option>
-          <option value="true">Android</option>
-        </select>
-      </ul>
-      <ul>
-        <label for="subject">Which subject did you enjoy more in school?</label>
-        <select id="subject" class="form-select form-select-sm" aria-label="Default select example">
-          <option selected>Select One</option>
-          <option value="false">English</option>
-          <option value="true">Math</option>
-        </select>
-      </ul>
-      <ul>
-        <label for="attire">Formal Thursday or Casual Friday?</label>
-        <select id="attire" class="form-select form-select-sm" aria-label="Default select example">
-          <option selected>Select One</option>
-          <option value="true">Formal Thursday</option>
-          <option value="false">Casual Friday</option>
-        </select>
-      </ul>
-
-
-
-      <!-- <div class="radio">
+      <div class="radio">
         <label>
           <input type="radio" name="experience" value="yes">
           Yes
@@ -120,7 +77,7 @@
           <input type="radio" name="attire" value="attire">
           Casual Friday
         </label>
-      </div> -->
+      </div>
 
     <button type="button" class="btn btn-primary btn-lg" id="submit">Submit</button>
     <button type="button" class="btn btn-primary btn-lg" id="reset-button">Reset Quiz</button>
