--- a/index.html
+++ b/index.html
@@ -29,52 +29,52 @@
     <p>Which kind of company would you rather work for?</p>
       <div class="radio">
         <label>
-          <input type="radio" name="company" value="corporate">
+          <input type="radio" name="company" value="false">
           Corporate
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="startup" value="startup">
+          <input type="radio" name="startup" value="true">
           Startup
         </label>
       </div>
     <p>iPhone or Android?</p>
       <div class="radio">
         <label>
-          <input type="radio" name="iphone" value="iphone">
+          <input type="radio" name="iphone" value="true">
           iPhone
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="android" value="android">
+          <input type="radio" name="android" value="false">
           Android
         </label>
       </div>
     <p>Which subject did you enjoy more in school?</p>
       <div class="radio">
         <label>
-          <input type="radio" name="english" value="english">
+          <input type="radio" name="english" value="true">
           English
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="math" value="math">
+          <input type="radio" name="math" value="false">
           Math
         </label>
       </div>
     <p>Formal Thursday or Casual Friday?</p>
       <div class="radio"
         <label>
-          <input type="radio" name="attire" value="attire">
+          <input type="radio" name="attire" value="false">
           Formal Thursday
         </label>
       </div>
       <div class="radio"
         <label>
-          <input type="radio" name="attire" value="attire">
+          <input type="radio" name="attire" value="true">
           Casual Friday
         </label>
       </div>
@@ -85,16 +85,19 @@
 
     <div id="ruby">
       <h3>You should learn Ruby!</h3>
+      <img src=img/ruby.png>
       <p>Ruby is not only fun to work with, it is fun to learn. It is a great choice for beginners and you can quickly build your project with less complex lines of code. Ruby is easy to get started with, flexible, and readable. You will find a lot of startups using Ruby and many of them use macs as their development machine so if you are more of a mac person, this may be the best bet for you! </p>
     </div>
 
     <div id="javascript">
       <h3>You should learn Javascript!</h3>
+      <img src=img/python.jpg>
       <p>Javascript is the most popular programming language but also one of the more complex languages to learn! It is great for those that have a more math-oriented brain and enjoy complex problems and formulas. If you are going into data science, this is the language for you!</p>
     </div>
 
     <div id="csharp">
       <h3>You should learn C#!</h3>
+      <img src=img/csharp.png>
       <p>C# is an incredibly versatile programming language and is the best for building Windows client applications. You will find that many programmer jobs in corporate settings are looking for candidates with C# skills. If you enjoy windows programs and a more corporate setting while remaining versatile, C# is definitely for you!</p>
     </div>
 
