add new variable format to scripts page for radio buttons as well as try new if and statements

--- a/index.html
+++ b/index.html
@@ -29,52 +29,52 @@
     <p>Which kind of company would you rather work for?</p>
       <div class="radio">
         <label>
-          <input type="radio" name="company" value="false">
+          <input type="radio" name="company" value="corporate">
           Corporate
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="startup" value="true">
+          <input type="radio" name="company" value="startup">
           Startup
         </label>
       </div>
     <p>iPhone or Android?</p>
       <div class="radio">
         <label>
-          <input type="radio" name="iphone" value="true">
+          <input type="radio" name="phone" value="iphone">
           iPhone
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="android" value="false">
+          <input type="radio" name="phone" value="android">
           Android
         </label>
       </div>
     <p>Which subject did you enjoy more in school?</p>
       <div class="radio">
         <label>
-          <input type="radio" name="english" value="true">
+          <input type="radio" name="subject" value="english">
           English
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="math" value="false">
+          <input type="radio" name="subject" value="math">
           Math
         </label>
       </div>
     <p>Formal Thursday or Casual Friday?</p>
       <div class="radio"
         <label>
-          <input type="radio" name="attire" value="false">
+          <input type="radio" name="attire" value="thursday">
           Formal Thursday
         </label>
       </div>
       <div class="radio"
         <label>
-          <input type="radio" name="attire" value="true">
+          <input type="radio" name="attire" value="friday">
           Casual Friday
         </label>
       </div>
