--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <div class="container">
     <h1>Which Programming Language Should You Learn?</h1>
     <h2>To find out which programming language is best suited for you, answer the following questions:</h2>
-    <p class="bold">Do you have any experience with programming?</p>
-    
     <form id="programming-quiz">
+      <p class="bold">Do you have any experience with programming?</p>
       <div class="radio">
         <label>
           <input type="radio" name="experience" value="yes">
@@ -83,34 +82,25 @@
       </div> 
     </form>
 
-      <button type="submit" class="btn btn-dark btn-" id="submit">Submit</button>
+    <button type="submit" class="btn btn-dark btn-" id="submit">Submit</button>
+
+    <div id="ruby">
+      <h3>You should learn Ruby!</h3>
+      <img src=img/ruby.png>
+    <p>Ruby is not only fun to work with, it is fun to learn. It is a great choice for beginners and you can quickly build your project with less complex lines of code. Ruby is easy to get started with, flexible, and readable.You will find a lot of startups using Ruby and many of them use macs as their development machine so if you aremore of a mac person, this may be the best bet for you!</p>
   </div>
 
-  <div id="ruby">
-    <h3>You should learn Ruby!</h3>
-    <img src=img/ruby.png>
-    <p>Ruby is not only fun to work with, it is fun to learn. It is a great choice for beginners and you can quickly
-      build your project with less complex lines of code. Ruby is easy to get started with, flexible, and readable.
-      You will find a lot of startups using Ruby and many of them use macs as their development machine so if you are
-      more of a mac person, this may be the best bet for you! </p>
-  </div>
+    <div id="javascript">
+      <h3>You should learn Javascript!</h3>
+      <img src=img/python.jpg>
+      <p>Javascript is the most popular programming language but also one of the more complex languages to learn! It is great for those that have a more math-oriented brain and enjoy complex problems and formulas. If you are going into data science, this is the language for you!</p>
+    </div>
 
-  <div id="javascript">
-    <h3>You should learn Javascript!</h3>
-    <img src=img/python.jpg>
-    <p>Javascript is the most popular programming language but also one of the more complex languages to learn! It is
-      great for those that have a more math-oriented brain and enjoy complex problems and formulas. If you are going
-      into data science, this is the language for you!</p>
-  </div>
-
-  <div id="csharp">
-    <h3>You should learn C#!</h3>
-    <img src=img/csharp.png>
-    <p>C# is an incredibly versatile programming language and is the best for building Windows client applications.
-      You will find that many programmer jobs in corporate settings are looking for candidates with C# skills. If you
-      enjoy windows programs and a more corporate setting while remaining versatile, C# is definitely for you!</p>
-  </div>
+    <div id="csharp">
+      <h3>You should learn C#!</h3>
+      <img src=img/csharp.png>
+      <p>C# is an incredibly versatile programming language and is the best for building Windows client applications. You will find that many programmer jobs in corporate settings are looking for candidates with C# skills. If you enjoy windows programs and a more corporate setting while remaining versatile, C# is definitely for you!</p>
+    </div>
   </div>
 </body>
-
 </html>
