add new if, else if, and else statements to get quiz to properly show/hide quiz results

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div> 
     </form>
 
-    <button type="submit" class="btn btn-dark btn-" id="submit">Submit</button>
+    <button type="submit" class="btn btn-dark btn-" id="submit">Get My Result!</button>
 
     <div id="ruby">
       <h3>You should learn Ruby!</h3>
