--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
       
     </form>
 
-      <div class="ruby" id="ruby">
+      <div id="ruby">
         <h3>You should learn Ruby!</h3>
         <img src=img/ruby.png>
         <p>Ruby is not only fun to work with, it is fun to learn. It is a great choice for beginners and you can quickly build your project with less complex lines of code. Ruby is easy to get started with, flexible, and readable.You will find a lot of startups using Ruby and many of them use macs as their development machine so if you aremore of a mac person, this may be the best bet for you!
         </p>
       </div>
 
-      <div class="javascript" id="javascript">
+      <div id="javascript">
         <h3>You should learn Javascript!</h3>
-        <img src=img/python.jpg>
+        <img src=img/javascript.png>
         <p>
           Javascript is the most popular programming language but also one of the more complex languages to learn! It is great for those that have a more math-oriented brain and enjoy complex problems and formulas. If you are going into data science, this is the language for you!
         </p>
       </div>
 
-      <div class="csharp" id="csharp">
+      <div id="csharp">
         <h3>You should learn C#!</h3>
         <img src=img/csharp.png>
         <p>
