tweak scripts and add new radio button option to see if i can make functionality any better

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               No
             </label>
           </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="experience" value="some">
+              Some
+            </label>
+          </div>
           <p class="bold">Which kind of company would you rather work for?</p>
           <div class="radio">
             <label>
@@ -43,6 +49,12 @@
             <label>
               <input type="radio" name="company" value="startup">
               Startup
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="company" value="mine">
+              My Own
             </label>
           </div>
           <p class="bold">iPhone or Android?</p>
@@ -58,6 +70,12 @@
               Android
             </label>
           </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="phone" value="neither">
+              Neither
+            </label>
+          </div>
           <p class="bold">Which subject did you enjoy more in school?</p>
           <div class="radio">
             <label>
@@ -71,6 +89,12 @@
               Math
             </label>
           </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="subject" value="science">
+              Science
+            </label>
+          </div>
           <p class="bold">Formal Thursday or Casual Friday?</p>
           <div class="radio">
             <label>
@@ -82,6 +106,12 @@
             <label>
               <input type="radio" name="attire" value="friday">
               Casual Friday
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="attire" value="everyday">
+              Casual Everyday!
             </label>
           </div>
 
