transfer over info from main page to gh-pages branch by changing text values to numerical values and replacing scripts if and else if statements to numerical statements

--- a/index.html
+++ b/index.html
@@ -22,65 +22,65 @@
           <p class="bold">Do you have any experience with programming?</p>
           <div class="radio">
             <label>
-              <input type="radio" name="experience" value="yes">
+              <input type="radio" name="experience" value="2">
               Yes
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="experience" value="no">
+              <input type="radio" name="experience" value="1">
               No
             </label>
           </div>
           <p class="bold">Which kind of company would you rather work for?</p>
           <div class="radio">
             <label>
-              <input type="radio" name="company" value="corporate">
+              <input type="radio" name="company" value="2">
               Corporate
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="company" value="startup">
+              <input type="radio" name="company" value="1">
               Startup
             </label>
           </div>
           <p class="bold">iPhone or Android?</p>
           <div class="radio">
             <label>
-              <input type="radio" name="phone" value="iphone">
+              <input type="radio" name="phone" value="1">
               iPhone
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="phone" value="android">
+              <input type="radio" name="phone" value="2">
               Android
             </label>
           </div>
           <p class="bold">Which subject did you enjoy more in school?</p>
           <div class="radio">
             <label>
-              <input type="radio" name="subject" value="english">
+              <input type="radio" name="subject" value="1">
               English
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="subject" value="math">
+              <input type="radio" name="subject" value="2">
               Math
             </label>
           </div>
           <p class="bold">Formal Thursday or Casual Friday?</p>
           <div class="radio">
             <label>
-              <input type="radio" name="attire" value="thursday">
+              <input type="radio" name="attire" value="2">
               Formal Thursday
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="attire" value="friday">
+              <input type="radio" name="attire" value="1">
               Casual Friday
             </label>
           </div>
